--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,6 +35,11 @@ ttl2nt_LDADD = libttl.la
 ttl2nt_LDFLAGS = -static
 BUILT_SOURCES += ttl2nt.yucc
 
+bin_PROGRAMS += ttl2ttl
+ttl2ttl_LDADD = libttl.la
+ttl2ttl_LDFLAGS = -static
+BUILT_SOURCES += ttl2ttl.yucc
+
 bin_PROGRAMS += ttl-wc
 ttl_wc_LDADD = libttl.la
 ttl_wc_LDFLAGS = -static
