fix, print stuff that's been declared @prefix : ... properly

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -24,4 +24,7 @@ CLEANFILES = $(check_PROGRAMS)
 include clitoris.am
 AM_CLIT_LOG_FLAGS = --builddir $(top_builddir)/src --verbose --keep-going
 
+TESTS += nil-prefix.clit
+EXTRA_DIST += nil-prefix.ttl
+
 ## Makefile.am ends here
